v4.10 ???
  - Added the -P command line option to build modules with "protected"
    redefined to "public" if supported by the platform.  This can result in
    significantly smaller modules.
  - Added the -k command line option and /KeywordArgs/ and /NoKeywordArgs/
    function annotations to support keyword arguments.
  - Added the /Default/ exception annotation.
  - Added support for configuring and building outside of the source tree.

v4.9.1 23rd October 2009
  - A bug fix release.

v4.9 26th September 2009
  - Added support for __iter__ and __next__.  (__next__ is used for Python v2
    as well as v3.)
  - Added the %API directive.
  - Added the /API/ annotation.
  - Added sipIsAPIEnabled() to the C API.
  - Added sip.getapi() and sip.setapi() to the Python API.
  - Added sip.ispyowned() to the Python API.
  - Mapped types can now act as a namespace for enums and static methods.
  - The /Array/ annotation can now be applied to classes and mapped types.
  - The /NoArgParser/ annotation can now be applied to methods as well as
    functions.
  - Added the --arch flag to configure.py to specify which MacOS/X
    architectures are built.
  - SIP is now also licensed under the GPL v2 and v3.

v4.8.1 16th June 2009
  - Added support for defining a private assignment operator to suppress the
    possible generation of an assignment helper.

v4.8 5th June 2009
  - Added support for Python v3.
  - Added the %BIGetBufferCode and %BIReleaseBufferCode to support the buffer
    interface of Python v3.
  - Added the %DefaultMetatype directive and the /Metatype/ class annotation to
    allow the meta-type of a wrapped type to be changed.
  - Added the %DefaultSupertype directive and the /Supertype/ class annotation
    to allow the super-type of a wrapped type to be changed.
  - Added the sip.simplewrapper type to be used as a super-type for wrapped
    types that don't take part in parent/child relationships.
  - Added the %InitialisationCode directive.